// Convenience exports for LocallyBuiltBlock
import { beacon_slots } from '../proto';

export type LocallyBuiltBlock = beacon_slots.LocallyBuiltBlock;
export type ILocallyBuiltBlock = beacon_slots.ILocallyBuiltBlock;
export type LocallyBuiltBlockMetadata = beacon_slots.LocallyBuiltBlockMetadata;
export type ILocallyBuiltBlockMetadata = beacon_slots.ILocallyBuiltBlockMetadata;
export type LocallyBuiltSlotBlocks = beacon_slots.LocallyBuiltSlotBlocks;
export type ILocallyBuiltSlotBlocks = beacon_slots.ILocallyBuiltSlotBlocks;
